@@ -1,6 +1,6 @@
 package org.bsm.service.impl;
 
-import cn.hutool.core.codec.Base64;
+import cn.hutool.core.io.FileUtil;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
 import lombok.extern.slf4j.Slf4j;
 import org.bsm.drive.DriverAdpter;
@@ -9,7 +9,6 @@ import org.bsm.drive.MyDriverManager;
 import org.bsm.entity.Datasource;
 import org.bsm.mapper.DatasourceMapper;
 import org.bsm.pagemodel.PageDataSource;
-import org.bsm.pagemodel.PageGiteeApiCaller;
 import org.bsm.pagemodel.PageUpload;
 import org.bsm.service.IDatasourceService;
 import org.bsm.service.IGiteeService;
@@ -18,12 +17,12 @@ import org.springframework.stereotype.Service;
 import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.io.File;
 import java.io.IOException;
 import java.net.URL;
 import java.sql.Connection;
 import java.sql.Driver;
 import java.sql.SQLException;
-import java.time.LocalDateTime;
 
 /**
  * <p>
@@ -51,31 +50,48 @@ public class DatasourceServiceImpl extends ServiceImpl<DatasourceMapper, Datasou
     public String uploadDrive(PageUpload pageUpload) throws IOException {
         String driveUrl = "";
 
-        // 向 Gitee 中提交头像
-        PageGiteeApiCaller pageGiteeApiCaller = new PageGiteeApiCaller();
         MultipartFile avatar = pageUpload.getFile();
-        /*生成文件地址*/
+
+        /*生成本地文件地址*/
         String fileName = avatar.getOriginalFilename();
         if (!StringUtils.hasText(fileName)) {
             return "";
         }
+        File file = new File("BSM/Drives/" + fileName);
 
-        pageGiteeApiCaller.setOwner("GZC201314");
-        pageGiteeApiCaller.setPath("BSM/drives/" + fileName);
-        pageGiteeApiCaller.setRepo("tuchuang");
-        // 判断gitee 中是否已经存在了该驱动，如果存在了，则直接返回改驱动的url地址
-        String fileUrl = giteeService.getFile(pageGiteeApiCaller);
-        if (StringUtils.hasText(fileUrl)) {
-            return fileUrl;
-        }
+        FileUtil.writeBytes(avatar.getBytes(), file);
+        driveUrl = file.getCanonicalPath();
 
-        String fileBase64 = Base64.encode(avatar.getBytes());
-        pageGiteeApiCaller.setContent(fileBase64);
-        pageGiteeApiCaller.setMessage("上传数据源驱动 " + LocalDateTime.now());
-
-        driveUrl = giteeService.addFile(pageGiteeApiCaller);
         return driveUrl;
     }
+//    public String uploadDrive(PageUpload pageUpload) throws IOException {
+//        String driveUrl = "";
+//
+//        // 向 Gitee 中提交头像
+//        PageGiteeApiCaller pageGiteeApiCaller = new PageGiteeApiCaller();
+//        MultipartFile avatar = pageUpload.getFile();
+//        /*生成文件地址*/
+//        String fileName = avatar.getOriginalFilename();
+//        if (!StringUtils.hasText(fileName)) {
+//            return "";
+//        }
+//
+//        pageGiteeApiCaller.setOwner("GZC201314");
+//        pageGiteeApiCaller.setPath("BSM/drives/" + fileName);
+//        pageGiteeApiCaller.setRepo("tuchuang");
+//        // 判断gitee 中是否已经存在了该驱动，如果存在了，则直接返回改驱动的url地址
+//        String fileUrl = giteeService.getFile(pageGiteeApiCaller);
+//        if (StringUtils.hasText(fileUrl)) {
+//            return fileUrl;
+//        }
+//
+//        String fileBase64 = Base64.encode(avatar.getBytes());
+//        pageGiteeApiCaller.setContent(fileBase64);
+//        pageGiteeApiCaller.setMessage("上传数据源驱动 " + LocalDateTime.now());
+//
+//        driveUrl = giteeService.addFile(pageGiteeApiCaller);
+//        return driveUrl;
+//    }
 
     /**
      * 测试驱动
@@ -88,7 +104,11 @@ public class DatasourceServiceImpl extends ServiceImpl<DatasourceMapper, Datasou
         boolean result = false;
         Connection connection = null;
         try {
-            URL url = new URL("jar:" + pageDataSource.getDriveurl() + "!/");
+            String[] split = pageDataSource.getDriveurl().split("/");
+            String fileName = split[split.length - 1];
+            File file = new File(pageDataSource.getDriveurl());
+            URL url = file.toURL();
+            log.warn("url===={}", url.getPath());
             ExtDriveClassLoader extDriveClassLoader = new ExtDriveClassLoader(new URL[]{url}, getClass().getClassLoader());
 
             Class<?> aClass = extDriveClassLoader.loadClass(pageDataSource.getDriveclass());
@@ -99,14 +119,15 @@ public class DatasourceServiceImpl extends ServiceImpl<DatasourceMapper, Datasou
             String driveVersion = majorVersion + "." + minorVersion;
             String driveType = driver.getClass().getName();
 
-            DriverAdpter mysql5DriverAdpter = new DriverAdpter(driver, driveVersion, driveType);
-            MyDriverManager.registerDriver(mysql5DriverAdpter);
+            DriverAdpter driverAdpter = new DriverAdpter(driver, driveVersion, driveType);
+            MyDriverManager.registerDriver(driverAdpter);
             connection = MyDriverManager.getConnection(pageDataSource.getSourceurl(), pageDataSource.getUsername(),
                     pageDataSource.getPassword(), driveVersion, driveType);
-
+            if (connection == null) {
+                return false;
+            }
             result = true;
-
-        } catch (SQLException | ClassNotFoundException | InstantiationException | IllegalAccessException | IOException e) {
+        } catch (Exception e) {
             log.error(e.getMessage());
             e.printStackTrace();
         } finally {
